--- a/src/main/resources/templates/changenotices/changenotice-info.html
+++ b/src/main/resources/templates/changenotices/changenotice-info.html
@@ -85,6 +85,62 @@
             </div>
 
         </div>
+
+        <br>
+
+        <p class="h4 mb-4" th:text="${changeNotice.name} + ' ' + #{electronicImage}"></p>
+
+        <div th:if="${electronicImageChangeNotice == null}">
+            <p class="h6" th:text="#{noElectronicImages}">No electronic images</p>
+
+            <!--        <p th:if="${emptyFileError != null}" class="text-danger">File should not be empty!</p>-->
+
+            <!--        <p th:if="${typeFileError != null}" class="text-danger">File should be pdf!</p>-->
+
+            <form th:action="@{'/electronicImageChangeNotices/save/' + ${changeNotice.id}}" method="post" enctype="multipart/form-data">
+                <div class="row mb-1 px-3">
+                    <div class="col-sm-3 custom-file">
+                        <input type="file" th:class="${addFileError == null} ? 'custom-file-input' : 'custom-file-input is-invalid'" id="customFile" name="file">
+                        <label class="custom-file-label" for="customFile">Choose file</label>
+                    </div>
+                    <button type="submit" class="btn btn-sm btn-primary col-sm-2" th:text="#{add}">Add electronic image</button>
+                </div>
+<!--                <div class="row">-->
+                <span class="help-block">
+                    <div th:switch="${addFileError}" th:if="${addFileError != null}">
+                        <ul>
+                            <li class="text-danger" th:case="'File should not be empty!'" th:text="#{addFileError.fileShouldNotBeEmpty}"/>
+                            <li class="text-danger" th:case="'File should have pdf type!'" th:text="#{addFileError.fileShouldHavePdfType}"/>
+                        </ul>
+                    </div>
+                </span>
+
+<!--                </div>-->
+            </form>
+
+            <script>
+                // Add the following code if you want the name of the file appear on select
+                $(".custom-file-input").on("change", function() {
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+                });
+            </script>
+        </div>
+
+
+        <div class="row px-3 mb-3" th:if="${electronicImageChangeNotice != null}">
+            <div class="col-sm-2 border">
+                <h6 th:text="${electronicImageChangeNotice.fileName}">Electronic image file name</h6>
+            </div>
+            <div class="col-sm-4 border">
+                <a class="btn btn-sm btn-outline-info"
+                   th:href="@{'/electronicImageChangeNotices/showFile/' + ${changeNotice.id} + '/' + ${electronicImageChangeNotice.id}}" th:target="_blank" th:text="#{show}">Show</a>
+
+                <a class="btn btn-sm btn-outline-danger"
+                   th:href="@{'/electronicImageChangeNotices/delete/' + ${changeNotice.id} + '/' + ${electronicImageChangeNotice.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{delete}">Delete</a>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
