--- a/src/main/resources/templates/companies/company-info.html
+++ b/src/main/resources/templates/companies/company-info.html
@@ -24,7 +24,7 @@
 
     <br>
 
-    <h3 th:text="#{companyDirectory}">Company Directory</h3>
+    <h3 class="font-weight-bold text-secondary" th:text="#{index.section.companies}">Companies</h3>
 
     <hr>
 
