--- a/src/main/resources/templates/companies/company-list.html
+++ b/src/main/resources/templates/companies/company-list.html
@@ -23,7 +23,7 @@
 
         <br>
 
-        <h3 th:text="#{companies.headline}">List of Companies</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{index.section.companies}">Companies</h3>
 
         <hr>
 
