--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -21,7 +21,7 @@
 
 <div class="container" th:fragment="menu">
 
-    <a class="h5" th:href="@{/}" th:text="#{backToHomePage}" href="#">Home</a>
+    <a class="h6 font-weight-bold" th:href="@{/}" th:text="#{backToHomePage}" href="#">Home</a>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
